# AceEval

./: AceEval.cabal  AceMIREX.hs  AceMIREXIO.hs  ChordJSON.hs  ChordLab.hs  Evaluation.hs  Main.hs  PreProcessing.hs  README.md
algorithmic-output/2012/billboard2012/CB4/: 1002.wav.txt  1003.wav.txt  1006.wav.txt  1007.wav.txt  1009.wav.txt  1012.wav.txt  1013.wav.txt  1014.wav.txt  1016.wav.txt  1018.wav.txt  1019.wav.txt  1020.wav.txt  1021.wav.txt  1022.wav.txt  1024.wav.txt  1025.wav.txt  1032.wav.txt  1033.wav.txt  1034.wav.txt  1037.wav.txt  1039.wav.txt  1040.wav.txt  1041.wav.txt  1042.wav.txt  1043.wav.txt  1044.wav.txt  1045.wav.txt  1046.wav.txt  1048.wav.txt  1051.wav.txt  1052.wav.txt  1053.wav.txt  1054.wav.txt  1055.wav.txt  1058.wav.txt  1059.wav.txt  1061.wav.txt  1062.wav.txt  1063.wav.txt  1066.wav.txt  (+137 more)
algorithmic-output/2012/billboard2012/CM3/: 1064.wav.txt  1085.wav.txt  1140.wav.txt  1181.wav.txt  1226.wav.txt  1228.wav.txt  1229.wav.txt
algorithmic-output/2012/billboard2012/JR2/: 1064.wav.txt  1085.wav.txt  1140.wav.txt  1181.wav.txt  1226.wav.txt  (+2 more)
results/: 2012table.py  2013table.py  barplotfusion.py  boxplotfusion.py  boxplotfusion_csr.py  boxplotfusion_med.py  boxplotfusion_wcsr.py  correlation.py  correlation_both.py  nemenyi.py  plotedits.py  tmp.py
results/bb12/: Billboard2012_MM.csv  Billboard2012_MajMin.csv  Billboard2012_MajMin_SA.csv  Billboard2012_MajMin_wcsrs.csv  Billboard2012_ROOT.csv  Billboard2012_ROOT_SA.csv  Billboard2012_ROOT_wcsrs.csv  Billboard2012_Sevth.csv  Billboard2012_Sevth_SA.csv  Billboard2012_Sevth_wcsrs.csv  Billboard2012_root.csv
results/bb12/mm/: 01mm2012bb.csv  Billboard2012_MM.csv  MMDFbase2012.csv
results/bb12/mmi/: Billboard2012_MajMinInv.csv
results/bb12/old/: Billboard2012_MajMin.csv  Billboard2012_ROOT.csv  Billboard2012_Sevth.csv
results/bb12/root/: 01root2012bb.csv  Billboard2012_root.csv  rootDFbase2012.csv
results/bb12/sevth/: Billboard2012_Sevth.csv
results/bb13/: Billboard2013_MajMin.csv  Billboard2013_MajMin_SA.csv  Billboard2013_MajMin_wcsrs.csv  Billboard2013_ROOT.csv  Billboard2013_ROOT_SA.csv  Billboard2013_ROOT_wcsrs.csv  Billboard2013_Sevth.csv  Billboard2013_Sevth_SA.csv  Billboard2013_Sevth_wcsrs.csv
results/bb13/mm/: 01mm2013bb.csv  Billboard2013_MM.csv  MMDFbase2013.csv
results/bb13/old/: Billboard2013_MajMin_new.csv  Billboard2013_ROOT.csv  Billboard2013_Sevth.csv
results/bb13/root/: 01root2013bb.csv  01rootint.csv  02Billboard2013_ROOT.csv  1Billboard2013_ROOT.csv  Billboard2013_root.csv  rootDFbase2013.csv  rootres.txt
results/bb13/sevth/: Billboard2013_Sevth.csv
results/old/: 01rootFusionBaseline.csv  OLD_Billboard2013_ROOT.csv
results/posthoctesting/: friedman.test.with.post.hoc.r  runFriedmanOnVincent.r
results/posthoctesting/bb12/: root_posthoc.txt
scoring/: compare.py  percentdiff.py  vincent-2012-score-structure.json  vincent-2013-score-structure.json
src/: AceMIREX.hs  AceMIREXIO.hs  ChordJSON.hs  ChordLab.hs  Evaluation.hs  Main.hs  PreProcessing.hs  Test.hs
src-main/: Test.hs
src/ACE/: Evaluation.hs  MIREX.hs
src/ACE/Evaluation/: ChordClass.hs  ChordEq.hs  ChordMaps.hs  EqIgnore.hs  Func.hs  ResultsPrinter.hs  Segmentation.hs
src/ACE/MIREX/: Data.hs  IO.hs  PreProcessing.hs
src/ACE/Parsers/: ChordChordify.hs  ChordJSON.hs  ChordLab.hs
(+332 files in other folders)
