name:                AceEval
version:             0.1.0.0
synopsis:            Automatic Chord Extraction Evaluation
-- description:         
license:             LGPL-3
license-file:        LICENSE
author:              W. Bas de Haas
maintainer:          W.B.deHaas@uu.nl
copyright:           (2013) Utrecht University
category:            Music
build-type:          Simple
cabal-version:       >=1.8

executable AceEval
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base ==4.6.*, 
                       parseargs ==0.1.*,
                       HarmTrace-Base ==1.4.*,
                       directory ==1.2.*, 
                       filepath ==1.3.*,
                       mtl ==2.1.*,
                       parallel-io == 0.3.3,
                       containers >= 0.5.0.0

  ghc-options:         -Wall -O2 -rtsopts -threaded